@@ -1,7 +1,11 @@
 # ChangeLog for sys-apps/lvm-user
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/lvm-user/ChangeLog,v 1.12 2003/01/05 02:01:37 aliz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/lvm-user/ChangeLog,v 1.13 2003/01/12 20:42:46 drobbins Exp $
 
+  12 Jan 2003; Daniel Robbins <drobbins@gentoo.org> lvm-user-1.0.6.ebuild:
+  removed dependency on kernel sources. This is no longer needed (see note in
+  the ebuild.)
+  
   05 Dec 2003; Daniel Ahlberg <aliz@gentoo.org> lvm-user-1.0.6.ebuild :
   Unmasked for x86.  
 
